# answer-seeking-agent

./: .gitignore  README.getting_started.md  README.md  README.pictures.md  build_images.sh  common.compose.yml  compose.yml  cpu-only.compose.yml  cpu.compose.yml  cuda.compose.yml  display_processes.sh  docker-compose.yml  quick_fill_secrets.sh  start_up_system.sh
.devcontainer/agent-celery-worker-1/: devcontainer.json
.devcontainer/agent-fastapi-dev-server-1/: devcontainer.json
backend/: .gitignore  README.adding_dependency.md  backend.env  backend.secrets.env.template  celeryconfig.py  common.compose.yml  compile_requirements.sh  compose.yml  cpu-only.compose.yml  cpu-only.override.yml  cpu.compose.yml  cuda.compose.yml  cuda.override.yml  demo-app.py  global_config.py  log_config_watch.py  logging.toml  mock_auth_app.py  pyproject.toml  requirements-cpu.compiled.txt  requirements-cuda12.compiled.txt  requirements.compiled.txt  run_celery_flower.sh  run_celery_worker.sh  run_fastapi_dev_server.sh  worker.py
backend/app/: __init__.py  public_models.py  signals.py
backend/app/agent/: __init__.py  agent.py  agent_state.py  answer_grader.py  checkpointer.py  deciders.py  document_retriever.py  grader_util.py  hallucination_grader.py  preprocess.py  question_rewriter.py
backend/app/doc_mgr/: __init__.py  doc_deleter.py  doc_mgr.py  doc_uploader.py  model.py  model_ops.py
backend/app/health/: __init__.py  health.py
backend/app/ingest/: __init__.py  ingest.py
backend/app/providers/chat_llm/: google_genai.py  openai.py
backend/app/providers/doc_loader/: __init__.py  unstructured.py
backend/app/providers/embeddings/: huggingface.py
backend/app/providers/file_store/: __init__.py  minio.py
backend/app/providers/retriever/: __init__.py
backend/app/providers/sql_database/: postgres.py
backend/app/providers/vector_store/: pgvector.py
backend/app/utils/: environ.py  logger_tree.py
backend/core/agent/: agent.py  answer_generator.py  internal_models.py  postprocess.py  retrieval_grader.py
backend/core/doc_mgr/: doc_deleter.py  doc_mgr.py  model_ops.py
backend/core/ingest/: __init__.py
backend/core/providers/chat_llm/: __init__.py  huggingface.py
backend/core/providers/doc_loader/: unstructured.py
backend/core/providers/embeddings/: __init__.py
backend/core/providers/file_store/: minio.py
backend/core/providers/sql_database/: __init__.py  postgres.py
backend/core/providers/vector_store/: __init__.py  pgvector.py
backend/core/status/: __init__.py  status.py
backend/core_app/: __init__.py  main.py
backend/core_app/routers/: __init__.py  admin.py  answer.py  documents.py
backend/core_worker/: __init__.py  celeryconfig.py  event_handlers.py  metrics.py  signal_handlers.py  tasks.py
backend/docker/: .dockerignore  Dockerfile  build_images.sh  cuda12.Dockerfile  custom-docker-entrypoint.sh  python_bookworm_cuda11.Dockerfile  python_bookworm_cuda12.Dockerfile  ubuntu_cuda12_python3.Dockerfile
backend/early_config/: __init__.py  config_env.py  config_logging.py
backend/early_init/: __init__.py  config_logging.py
backend/global_config/: __init__.py  main.py
backend/log_config_monitor/: __init__.py  monitor.py
backend/mock_auth/: auth.py
backend/simple_auth/: __init__.py  apply_jwt.py  models.py  sim_create_jwt.py  users.py
frontend/: .eslintrc.cjs  .gitignore  README_nginx_dns_reresolve.md  compose.yml  docker-compose.yml  nginx_default.conf  run_dev_server.sh
grafana/: compose.yml  datasource.yml
minio/: compose.yml  docker-compose.yml  init-minio.sh  minio-init.env  minio-init.secrets.env.template  minio.env  minio.secrets.env.template
postgres/: README.md  compose.yml  init-db.sql.template  init-postgres.sh  pgvector-init.env  pgvector-init.secrets.env.template  pgvector.env  pgvector.secrets.env.template
prometheus/: alert.rules.yml  alertmanager.yml  compose.yml  prometheus.yml
redis/: compose.yml
(+41 files in other folders)
